my home work to hospital work

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -1,2 +1,10 @@
-body
-	font-size: 1.6em !important
+//@import 'sanitize.styl'
+//@import '../../node_modules/kouto-swiss'
+//@import '../../node_modules/typographic/stylus/typographic'
+
+//meyer-reset()
+//box-sizing-reset()
+@import '_vars.styl'
+//typographic()
+
+@import 'index.styl'
